--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,8 @@
   <body>
     <button id='play'>Play</button>
     <button id='pause'>Pause</button>
-    <button id='next'>Next</button>
+    <button id='next'>Fonoteca remoto</button>
+    <button id='next1'>Fonoteca local</button>
     <audio></audio>
     <script src="/static/app.js"></script>
   </body>
