--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,9 @@
     <button id='pause'>Pause</button>
     <button id='next'>Fonoteca remoto</button>
     <button id='next1'>Fonoteca local</button>
-    <audio></audio>
+    <audio autoplay preload controls>
+      <source src="https://github.com/calderaro/audio/blob/master/static/01.mp3?raw=true" type="audio/mpeg">
+    </audio>
     <script src="/static/app.js"></script>
   </body>
 </html>
