--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <button id='next'>Fonoteca remoto</button>
     <button id='next1'>Fonoteca local</button>
     <audio autoplay preload controls>
-      <source src="https://github.com/calderaro/audio/blob/master/static/01.mp3?raw=true" type="audio/mpeg">
+      <source type="audio/mpeg">
     </audio>
     <script src="/static/app.js"></script>
   </body>
