media tag reader

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <div id='name'></div>
     <audio autoplay preload controls></audio>
     <div id='error'></div>
+    <script src="/static/mtags.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="/static/app.js"></script>
   </body>
